[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/scripts/tilemap.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://environment.tres" type="Environment" id=3]
[ext_resource path="res://assets/meshes/Gizmo.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://src/scripts/LayersPanel.gd" type="Script" id=5]
[ext_resource path="res://assets/meshes/TileIndecator.tres" type="PlaneMesh" id=7]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=2]
render_priority = 20
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0.376471, 0.376471, 0.498039 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.0470588 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.176471, 0.176471, 0.176471, 0.176471 )

[node name="Spatial" type="Spatial"]
pause_mode = 2

[node name="TileMap3D" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Cam" type="MeshInstance" parent="."]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 2 )

[node name="3dCam" type="Camera" parent="Cam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15 )
keep_aspect = 0
environment = ExtResource( 3 )
current = true
far = 1024.0

[node name="RayCast" type="RayCast" parent="."]
enabled = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.433013, 0.866025, 0.25, -0.5, -2.2954e-08, 0.866025, 0.75, -0.5, 0.433013, 0, 7.0439, 0 )

[node name="Plane" type="StaticBody" parent="."]
transform = Transform( 11.99, 0, 0, 0, 1, 0, 0, 0, 11.99, 0, 0, 0 )

[node name="Coll" type="CollisionShape" parent="Plane"]
shape = SubResource( 3 )

[node name="Plane" type="MeshInstance" parent="Plane"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="TileIndecator" type="MeshInstance" parent="."]
mesh = ExtResource( 7 )
material/0 = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="ViewportContainer" parent="CanvasLayer/UI"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Viewport" type="Viewport" parent="CanvasLayer/UI/Viewport"]
size = Vector2( 64, 64 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Gizmo" type="MeshInstance" parent="CanvasLayer/UI/Viewport/Viewport"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = null

[node name="Cam" type="Spatial" parent="CanvasLayer/UI/Viewport/Viewport"]

[node name="Camera" type="Camera" parent="CanvasLayer/UI/Viewport/Viewport/Cam"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
projection = 1
current = true
size = 1.15

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/UI"]
margin_right = 109.0
margin_bottom = 596.0
mouse_filter = 0
size_flags_horizontal = 0
custom_constants/separation = 0

[node name="Tile" type="Label" parent="CanvasLayer/UI/VBox"]
margin_right = 71.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tile_size = "

[node name="LayersPanel" type="PanelContainer" parent="CanvasLayer/UI/VBox"]
margin_top = 14.0
margin_right = 109.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/panel = SubResource( 6 )
script = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/UI/VBox/LayersPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 107.0
margin_bottom = 160.0
custom_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="CanvasLayer/UI/VBox/LayersPanel/VBox"]
margin_right = 105.0
margin_bottom = 20.0

[node name="Add" type="Button" parent="CanvasLayer/UI/VBox/LayersPanel/VBox/Header"]
margin_right = 35.0
margin_bottom = 20.0
text = "add"

[node name="Del" type="Button" parent="CanvasLayer/UI/VBox/LayersPanel/VBox/Header"]
margin_left = 39.0
margin_right = 71.0
margin_bottom = 20.0
text = "del"

[node name="Vis" type="Button" parent="CanvasLayer/UI/VBox/LayersPanel/VBox/Header"]
margin_left = 75.0
margin_right = 105.0
margin_bottom = 20.0
text = "vis"

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/UI/VBox/LayersPanel/VBox"]
margin_top = 30.0
margin_right = 105.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 1
size_flags_vertical = 3

[node name="Layers" type="VBoxContainer" parent="CanvasLayer/UI/VBox/LayersPanel/VBox/Scroll"]
margin_right = 105.0
size_flags_horizontal = 3

[node name="TilesPanel" type="PanelContainer" parent="CanvasLayer/UI/VBox"]
margin_top = 464.0
margin_right = 109.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_styles/panel = SubResource( 6 )

[node name="Scroll" type="ScrollContainer" parent="CanvasLayer/UI/VBox/TilesPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 107.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 1

[connection signal="mouse_entered" from="CanvasLayer/UI/VBox/LayersPanel" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ true ]]
[connection signal="mouse_exited" from="CanvasLayer/UI/VBox/LayersPanel" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ false ]]
[connection signal="mouse_entered" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Add" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ true ]]
[connection signal="mouse_exited" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Add" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ false ]]
[connection signal="pressed" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Add" to="CanvasLayer/UI/VBox/LayersPanel" method="_on_add_layer_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Del" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ true ]]
[connection signal="mouse_exited" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Del" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ false ]]
[connection signal="pressed" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Del" to="CanvasLayer/UI/VBox/LayersPanel" method="_on_del_layer_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Vis" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ true ]]
[connection signal="mouse_exited" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Vis" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ false ]]
[connection signal="pressed" from="CanvasLayer/UI/VBox/LayersPanel/VBox/Header/Vis" to="CanvasLayer/UI/VBox/LayersPanel" method="_on_layers_visibility_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/UI/VBox/TilesPanel" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ true ]]
[connection signal="mouse_exited" from="CanvasLayer/UI/VBox/TilesPanel" to="Cam" method="_on_UI_mouse_enter_exit" binds= [ false ]]
